--- a/blog.html
+++ b/blog.html
@@ -46,8 +46,10 @@
 
     <section class="blog-banner" style="background-image: url(assect/img/bp1.jpg)">
         <div class="blog-banner-con">
-            <span class="bb-date">December 17,2020</span>
-            <h1 class="bb-head">Scent in the voyages</h1>
+            <div class="blog-banner-inner">
+                <span class="bb-date">December 17,2020</span>
+                <h1 class="bb-head">Scent in the voyages</h1>
+            </div>
         </div>
     </section>
 
@@ -83,13 +85,14 @@
         </div>
     </section>
 
+
     <section class="mfe">
-        <div class="mre-main">
-            <div class="mer-inner">
-                <div class="mer-head">
+        <div class="mfe-main">
+            <div class="mfe-inner">
+                <div class="mfe-head">
                     <h3>Methods for Everyone.</h3>
                 </div>
-                <div class="mer-para">
+                <div class="mfe-para">
                     <p>
                         This response is important for our ability to learn from mistakes,
                         but it alsogives rise to self-criticism, because it is part of the
@@ -110,25 +113,30 @@
         </div>
     </section>
 
+
     <section class="blog-photo">
-        <img src="assect/img/bp3.jpg" alt="" />
+        <div class="blog-photo-inner">
+            <img src="assect/img/bp3.jpg" alt="" />
+        </div>
     </section>
 
     <section class="blog-quotes">
         <div class="blog-quotes-main">
             <div class="blog-quote-con-main">
                 <div class="blog-quote-con-inner">
-                    <div class="bqc-img">
-                        <img src="assect/img/double-quotes.png" alt="" />
-                    </div>
-                    <div class="bqc-con">
-                        <p>
-                            Our greatest weakness lies in giving up. The most certain way to
-                            succeed is always to try just one more time. emotional sensation
-                            of stress from our first.
-                        </p>
-                        <h5>Griff Bowden</h5>
-                        <p>Google</p>
+                    <div class="blog-quote-con-border">
+                        <div class="bqc-img">
+                            <img src="assect/img/double-quotes.png" alt="" />
+                        </div>
+                        <div class="bqc-con">
+                            <p>
+                                Our greatest weakness lies in giving up. The most certain way to
+                                succeed is always to try just one more time. emotional sensation
+                                of stress from our first.
+                            </p>
+                            <h5>Griff Bowden</h5>
+                            <p>Google</p>
+                        </div>
                     </div>
                 </div>
             </div>
