--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
     <section class="home" id="home" style="background-image: url(assect/img/home.jpg)">
         <div class="home-content-main">
-            <div class="home-content-inside">
-                <div class="h-content">
+            <div class="home-content-inner">
+                <!-- <div class="h-content"> -->
                     <div class="play-main">
                         <div class="play-out">
                             <i class="fa fa-play" aria-hidden="true"></i>
@@ -66,7 +66,7 @@
                             create vibrant new places and spaces, attract people, and
                             encourage</span>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </section>
