--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="base">
             <div class="logo">
                 <img src="assect/img/logo.svg" alt="" />
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <section class="home" id="home" style="background-image: url(assect/img/home.jpg)">
@@ -161,7 +161,9 @@
         </div>
     </section>
 
-    <section class="projects" id="projects"></section>
+    <section class="projects" id="projects">
+
+    </section>
 
     <section class="education" id="education"></section>
 
@@ -179,40 +181,47 @@
                 </div>
             </div>
 
-            <div class="tm-carousel"></div>
+            <div class="tm-carousel">
+                <div class="tm-carousel-inner">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, veritatis tenetur molestias
+                    possimus eveniet ad repellat inventore necessitatibus ab nesciunt laborum facilis libero ullam quia
+                    earum in praesentium dicta! Unde.
+                </div>
+            </div>
+
         </div>
     </section>
 
+
+
     <section class="partners" id="partners">
         <div class="partners-main">
-            <div class="partners-inner">
-                <div class="partners-heding">
-                    <h3>Partners</h3>
+            <div class="partners-heding">
+                <h3>Partners</h3>
+            </div>
+            <div class="partners-logo">
+                <div class="p-logo">
+                    <img src="assect/img/behr.png" alt="" />
                 </div>
-                <div class="partners-logo">
-                    <div class="p-logo">
-                        <img src="assect/img/behr.png" alt="" />
-                    </div>
-                    <div class="p-logo">
-                        <img src="assect/img/christoper.png" alt="" />
-                    </div>
-                    <div class="p-logo">
-                        <img src="assect/img/csfti.png" alt="" />
-                    </div>
-                    <div class="p-logo">
-                        <img src="assect/img/artchive.png" alt="" />
-                    </div>
-                    <div class="p-logo">
-                        <img src="assect/img/fasteane.png" alt="" />
-                    </div>
-                    <div class="p-logo">
-                        <img src="assect/img/badische.png" alt="" />
-                    </div>
-                    <div class="p-logo">
-                        <img src="assect/img/ron lones.png" alt="" />
-                    </div>
-                    <div class="p-logo"><img src="assect/img/golden.png" alt="" /></div>
+                <div class="p-logo">
+                    <img src="assect/img/christoper.png" alt="" />
                 </div>
+                <div class="p-logo">
+                    <img src="assect/img/csfti.png" alt="" />
+                </div>
+                <div class="p-logo">
+                    <img src="assect/img/artchive.png" alt="" />
+                </div>
+                <div class="p-logo">
+                    <img src="assect/img/fasteane.png" alt="" />
+                </div>
+                <div class="p-logo">
+                    <img src="assect/img/badische.png" alt="" />
+                </div>
+                <div class="p-logo">
+                    <img src="assect/img/ron lones.png" alt="" />
+                </div>
+                <div class="p-logo"><img src="assect/img/golden.png" alt="" /></div>
             </div>
         </div>
     </section>
